--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-google_api_key=XXXXX
+google_api_key=${GOOGLE_API_KEY}
 transit_url=http://developer.itsmarta.com/BRDRestService/RestBusRealTimeService/GetAllBus
 geocoding_url=https://maps.googleapis.com/maps/api/geocode/json?address=
 distance_url=https://maps.googleapis.com/maps/api/distancematrix/json?units=imperial&
